<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>hr.ja</groupId>
    <artifactId>Spring3Weboo</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>SpringBoot3weboo</name>
    <description>SpringBoot3weboo</description>
    <properties>
        <java.version>21</java.version>
        <start-class>hr.ja.weboo.App</start-class>
        <jte.version>3.1.10</jte.version>

        <!--        <tomcat.version>10.1.7</tomcat.version>-->
    </properties>
    <dependencies>
        <!--        <dependency>-->
        <!--            <groupId>com.github.httl</groupId>-->
        <!--            <artifactId>httl</artifactId>-->
        <!--            <version>1.0.11</version>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>io.github.crac.org.apache.tomcat.embed</groupId>-->
        <!--            <artifactId>tomcat-embed-core</artifactId>-->
        <!--            <version>10.1.7</version>-->
        <!--        </dependency>-->


        <!-- https://mvnrepository.com/artifact/gg.jte/jte -->
        <dependency>
            <groupId>gg.jte</groupId>
            <artifactId>jte</artifactId>
            <version>${jte.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <!--            <exclusions>-->
            <!--                <exclusion>-->
            <!--                    <groupId>org.apache.tomcat.embed</groupId>-->
            <!--                    <artifactId>tomcat-embed-core</artifactId>-->
            <!--                </exclusion>-->
            <!--            </exclusions>-->
        </dependency>

        <dependency>
            <groupId>org.reactivestreams</groupId>
            <artifactId>reactive-streams</artifactId>
            <version>1.0.4</version>
        </dependency>


        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>


        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <dependency>
            <groupId>io.quarkus.qute</groupId>
            <artifactId>qute-core</artifactId>
            <version>3.2.2.Final</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>


        <!--        <dependency>-->
        <!--            <groupId>com.j2html</groupId>-->
        <!--            <artifactId>j2html</artifactId>-->
        <!--            <version>1.6.0</version>-->
        <!--        </dependency>-->


        <!--        <dependency>-->
        <!--            <groupId>org.springframework.boot</groupId>-->
        <!--            <artifactId>spring-boot-devtools</artifactId>-->
        <!--            <scope>runtime</scope>-->
        <!--            <optional>true</optional>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>


        <!--        <dependency>-->
        <!--            <groupId>io.undertow</groupId>-->
        <!--            <artifactId>undertow-core</artifactId>-->
        <!--            <version>2.3.5.Final</version>-->
        <!--        </dependency>-->


        <!--        <dependency>-->
        <!--            <groupId>cz.habarta.typescript-generator</groupId>-->
        <!--            <artifactId>typescript-generator-core</artifactId>-->
        <!--            <version>3.2.1263</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>cz.habarta.typescript-generator</groupId>-->
        <!--            <artifactId>typescript-generator-spring</artifactId>-->
        <!--            <version>3.2.1263</version>-->
        <!--        </dependency>-->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <!--            <plugin>-->
            <!--                <groupId>cz.habarta.typescript-generator</groupId>-->
            <!--                <artifactId>typescript-generator-maven-plugin</artifactId>-->
            <!--                <version>3.2.1263</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>generate</id>-->
            <!--                        <goals>-->
            <!--                            <goal>generate</goal>-->
            <!--                        </goals>-->
            <!--                        <phase>process-classes</phase>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--                <configuration>-->
            <!--                    <jsonLibrary>jackson2</jsonLibrary>-->
            <!--                    <classes>-->
            <!--                        <class>hr.ja.weboo.UserRestController</class>-->
            <!--                        <class>hr.ja.weboo.DatabaseRestController</class>-->
            <!--                    </classes>-->
            <!--                    <outputKind>global</outputKind>-->
            <!--                    <generateSpringApplicationClient>true</generateSpringApplicationClient>-->
            <!--                    <outputFileType>implementationFile</outputFileType>-->
            <!--                    <outputFile>/home/tag/IdeaProjects/SpringBoot3weboo/ng/src/app/api.ts</outputFile>-->

            <!--                </configuration>-->
            <!--                <dependencies>-->
            <!--                    <dependency>-->
            <!--                        <groupId>cz.habarta.typescript-generator</groupId>-->
            <!--                        <artifactId>typescript-generator-spring</artifactId>-->
            <!--                        <version>3.2.1263</version>-->
            <!--                    </dependency>-->
            <!--                </dependencies>-->
            <!--            </plugin>-->
            <plugin>
                <groupId>gg.jte</groupId>
                <artifactId>jte-maven-plugin</artifactId>
                <version>${jte.version}</version>
                <configuration>
                    <sourceDirectory>${basedir}/src/main/jte</sourceDirectory>
                    <contentType>Html</contentType>
                    <binaryStaticContent>true</binaryStaticContent>
                    <targetDirectory>${project.build.directory}/target/jte-classes</targetDirectory>
                </configuration>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>


            <!-- Since we use precompiled binary content parts, we need to copy those resources next to the compiled class files (the maven plugin doesn't do that for us) -->
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${basedir}/target/generated-sources/jte</directory>
                                    <includes>
                                        <include>**/*.bin</include>
                                    </includes>
                                    <filtering>false</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>


    </build>

</project>
